@@ -18,11 +18,11 @@
     </properties>
     <dependencies>
                 <!-- Local JCEF dependency (install jcef.jar into local repo or change coordinates) -->
-                <dependency>
-                    <groupId>org.jcef</groupId>
-                    <artifactId>jcef</artifactId>
-                    <version>1.0</version>
-                </dependency>
+        <dependency>
+            <groupId>org.jcef</groupId>
+            <artifactId>jcef</artifactId>
+            <version>1.0</version>
+        </dependency>        
 
         <dependency>
             <groupId>mysql</groupId>
@@ -202,7 +202,37 @@
 
     </dependencies>
 
-
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.15.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>
+                        <arg>--add-opens</arg>
+                        <arg>javafx.graphics/javafx.scene=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>tn.esprit.main.Main</mainClass>
+                    <arguments></arguments>
+                    <systemProperties>
+                        <systemProperty>
+                            <key>java.library.path</key>
+                            <value>${java.library.path}</value>
+                        </systemProperty>
+                    </systemProperties>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
